# send-email

./: LICENSE  send-email.cabal
src/SendMail/: SendMail.hs  Types.hs
src/SendMail/Internal/: .Mailgun.hs.swo  Mailgun.hs  SendMailInternal.hs  Types.hs
test/tst_send/: main.hs
