name:                send-email
version:             0.1.0.0
synopsis:            Interface for sending mail using HTTP services

license:             BSD3
license-file:        LICENSE
author:              Jørgen Lind
maintainer:          jorgen.lind@gmail.com

category:            Web
build-type:          Simple

cabal-version:       >=1.10

library
  exposed-modules: SendMail.SendMail
                   SendMail.Types
  other-modules:   SendMail.Internal.SendMailInternal
                   SendMail.Internal.Mailgun
                   SendMail.Internal.Types
  build-depends: base                          >= 4.7        && < 4.8
               , yesod-core                    >= 1.2.12     && < 1.3
               , bytestring                    >= 0.9        && < 0.11
               , text                          >= 0.11       && < 2.0
               , http-conduit                  >= 2.1.1      && < 2.2
               , http-client
               , exceptions
               , yaml                          >= 0.8        && < 0.9
               , aeson                         >= 0.8.0      && < 0.9
               , unordered-containers
               , filepath
               , transformers
               , case-insensitive
               , base64-bytestring

  hs-source-dirs:      src
  default-language:    Haskell2010

executable tst_send
  main-is: main.hs
  hs-source-dirs: test/tst_send
  build-depends: base
                 , send-email
                 , http-conduit                  >= 2.1.1        && < 2.2
                 , text                          >= 0.11       && < 2.0
                 , yaml                          >= 0.8        && < 0.9
                 , bytestring                    >= 0.9        && < 0.11
                 , transformers
                 , http-types
  default-language:    Haskell2010
